Tiles & text overlap isssue fix

--- a/src/components/onboardingGuide/onboardingGuide.scss
+++ b/src/components/onboardingGuide/onboardingGuide.scss
@@ -5,8 +5,6 @@
         display: grid;
         grid-template-columns: 300px 1px 300px 300px;
         grid-gap: 20px;
-        position: absolute;
-        top: -80px;
     }
 
     .onboarding-header{
